--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,16 @@ version: '3.9'
 services:
   web:
     image: php:8.2-apache
-    container_name: php8.2-apache
+    container_name: php-apache
     ports:
-      - "80:80"
+      - "8000:80"
     volumes:
       - ./app:/var/www/html/
     depends_on:
       - db
   db:
     image: mariadb
-    container_name: mariadb
+    container_name: lates
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: mydb
@@ -21,7 +21,7 @@ services:
       - ./mysql:/var/lib/mysql
   adminer:
     image: adminer
-    container_name: adminer
+    container_name: lates
     ports:
       - "8080:8080"
     depends_on:
